# Aker

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  pgvector.patch
apps/: spfresh.patch  sptag.patch
inc/: ApproxFilter.hh  Commons.hh  EvictionStrategy.hh  ResultCache2CWrapper.h  Timer.hh  Vector2.hh  VectorPool2.hh  WriteLog.hh  logger.hh
inc/core/: ResultCache2.hh
inc/utils/: DefaultHash.hh  DistanceFuncs.hh  ParamParser.hh  SequenceGen.hh
script/: activate.sh  run-potluck.sh  run-proximity.sh  run-topkache.sh
script/common/0-conf/: spacev-10m-hnsw-workloada-similar-0.3-top10-newbuild.ini
script/common/1-init/: build-status.sql  init.sh  init.sql  postgresql.conf  single-run.sh
script/common/2-runs/: dscheck.py  gentruth.py  run-2.py  snapshot_gt.py  split.py  trace-2.py  trace-standalone.py
script/configs/: spacev-10m-hnsw-workloada-similar-0.3-top100-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.6-top10-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.6-top100-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.9-top10-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.9-top100-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.99-top10-newbuild.ini  spacev-10m-hnsw-workloada-similar-0.99-top100-newbuild.ini  spacev-1m-hnsw-stress-insert.ini  sphere-10m-hnsw-workloada-similar-0.3-top10-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.3-top100-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.6-top10-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.6-top100-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.9-top10-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.9-top100-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.99-top10-rebuild.ini  sphere-10m-hnsw-workloada-similar-0.99-top100-rebuild.ini
script/pgvector-aker/: aker-spacev.sh  aker-stress-pool-const.sh  aker-stress-potluck.sh  potluck-spacev.sh  proximity-spacev.sh
script/pgvector-base/: base-mt.sh  base-stress.sh  base.sh
script/pgvector-base/2-runs/: build.py  create.py  fix.py  run-2.py  run-3.py  run-stress.py  trace-stress.py  trace.py  upload.py
src/: ApproxFilter.cc  ResultCache2CWrapper.cc  ResutlCacheStats.cc  Timer.cc  Vector2.cc  VectorPool2.cc  WriteLog.cc
src/core/: ResultCache2Ext.cc  ResultCache2Int.cc
src/utils/: DefaultHash.cc  ParamParser.cc  SequenceGen.cc
test/: app-sequence.cc  faiss-microbenchmark.cc  test-common-c.h  test-common.hh  test-topkache-c.c  test-topkache.cc
test/runs/: test_deletes.hh  test_exact_search_approx_insert.hh  test_scratchpad.hh  test_write_logs.hh
